<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.androidzillowsearch.MainActivity" 
    android:orientation="vertical"
    android:background="@drawable/background">
	
    <TextView
        android:id="@+id/headingtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#fff"/>
		
    <TextView
        android:id="@+id/addresstv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:paddingTop="9dip"
        android:paddingRight="5dip"
        android:paddingBottom="1dip" 
        android:textColor="#fff"/>
  <EditText 
        android:id="@+id/addet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:hint="@string/Street_Address" 
        android:textSize="18sp"
        android:paddingLeft="5dp"
        android:background="@drawable/shapes"
        android:paddingTop="9dip"
        android:paddingRight="5dip"
        android:paddingBottom="9dip"
        android:textColor="#000"/>
        
<TextView
        android:id="@+id/addresserrtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        
        android:textColor="#ff0000"/>
    
  <TextView
        android:id="@+id/citytv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:paddingTop="9dip"
        android:paddingRight="5dip"
        android:paddingBottom="1dip" 
        android:textColor="#fff" />  
    <EditText 
        android:id="@+id/cityet"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:background="@drawable/shapes"
        android:paddingTop="9dip"
        android:paddingLeft="5dp"
        android:paddingRight="5dip"
        android:paddingBottom="9dip" 
        android:hint="@string/cityhint" 
        android:textColor="#000"/>
    <TextView
        android:id="@+id/cityerrtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"
         />  
       <TextView
        android:id="@+id/Statetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="18sp"
        android:paddingTop="9dip"
        android:paddingRight="5dip"
        android:paddingBottom="1dip" 
        android:textColor="#fff"/>  
        <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statespinner"
        android:background="@drawable/shapes"
        android:dropDownWidth="fill_parent"
        android:textColor="#fff"
        />
        <TextView
        android:id="@+id/stateerrtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"/>
       
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:background="#6e6e6e" />
    
    <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:src="@drawable/zillowlogo" 
            android:contentDescription="TODO"/>
    </LinearLayout>
    
        <LinearLayout
            android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#ffffff" />


        
    
    <TextView
        android:id="@+id/nomatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#ff0000"/>  
</LinearLayout>
